--- a/src/style.scss
+++ b/src/style.scss
@@ -1,7 +1,6 @@
 @import "https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css";
-$bgcolor: blue;
+$bgcolor: rgb(0, 0, 0);
 
-html,body {
-    background-color:lighten($bgcolor, 30%);}
-
-    
+html,body{
+    background-color: pink;
+}
